--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "software_intergration_project",
   "version": "1.0.0",
   "description": "",
-  "main": "commitlint.config.js",
+  "main": "index.js",
   "scripts": {
+    "start:dev": "nodemon src/index.js",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "lint:fix": "eslint 'src/**/*.{js,ts}' --fix",
     "prettier": "prettier --write 'src/**/*.{js,ts,json,css,md}'",
@@ -14,7 +15,20 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2",
+    "pg": "^8.11.3"
+  },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/register": "^7.23.7",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.7.0",
