--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.7.0",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
