--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.7.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.0.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -41,6 +43,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
     "typescript-eslint": "^7.16.1"
   },
   "lint-staged": {
