--- a/package.json
+++ b/package.json
@@ -2,22 +2,26 @@
   "name": "software_intergration_project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start:dev": "nodemon src/index.js",
+    "start:dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "lint:fix": "eslint 'src/**/*.{js,ts}' --fix",
     "prettier": "prettier --write 'src/**/*.{js,ts,json,css,md}'",
     "prepare": "husky install",
     "type-check": "tsc --noEmit",
     "pre-commit": "lint-staged"
-  },
+  }
+  ,
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
@@ -54,6 +58,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.16.1"
   },
