--- a/.env.dev
+++ b/.env.dev
@@ -7,3 +7,4 @@ DB_PORT=5432
 MONGO_URI=mongodb+srv://dev_user:Tin123@dev-cluster.ii0bjz0.mongodb.net/?retryWrites=true&w=majority&appName=dev-cluster
 SESSION_SECRET=1234
 PORT=8080
+JWT_SECRET_KEY=your_secret_key
