fix: define and use status code for user already exists

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "prepare": "husky install",
     "type-check": "tsc --noEmit",
     "pre-commit": "lint-staged"
-  }
-  ,
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,6 +24,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
