--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=postgres
-DB_PASSWORD=123
+DB_PASSWORD=17092022
 DB_PORT=5432
 MONGO_URI=mongodb+srv://dev_user:Tin123@dev-cluster.ii0bjz0.mongodb.net/?retryWrites=true&w=majority&appName=dev-cluster
 SESSION_SECRET=1234
