--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prettier": "prettier --write 'src/**/*.{js,ts,json,css,md}'",
     "prepare": "husky install",
     "type-check": "tsc --noEmit",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
@@ -56,8 +58,10 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.8.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.16.1"
