--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 # .env.dev
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=postgres
+DB_NAME=postgres_dev
 DB_PASSWORD=123
 DB_PORT=5432
 MONGO_URI=mongodb+srv://dev_user:Tin123@dev-cluster.ii0bjz0.mongodb.net/?retryWrites=true&w=majority&appName=dev-cluster
