--- a/.env.release
+++ b/.env.release
@@ -1,7 +1,7 @@
 # .env.release
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=postgres
+DB_NAME=postgres_release
 DB_PASSWORD=123
 DB_PORT=5432
 MONGO_URI=mongodb+srv://release-user:Tin123@release-cluster.wptmzwv.mongodb.net/?retryWrites=true&w=majority&appName=Release-Cluster
