fix: change .env variable

--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
 # .env.dev
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=postgres
-DB_PASSWORD=17092022
+DB_NAME=postgres_prod
+DB_PASSWORD=123
 DB_PORT=5432
 MONGO_URI=mongodb+srv://khanhnguyen26403:Nguyen2604@prod-cluster.x7qsgpg.mongodb.net/?retryWrites=true&w=majority&appName=prod-cluster
 SESSION_SECRET=1234
