--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
+    "supertest": "^7.0.0",
     "winston": "^3.13.1"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.0.2",
     "@types/pg": "^8.11.6",
+    "@types/supertest": "^6.0.2",
     "@types/winston": "^2.4.4",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
