--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,12 +1,12 @@
-name: Deployment Pipeline for Dev Environment
+name: PR Checks for Dev Environment
 
 on:
-  push:
+  pull_request:
     branches:
       - dev
 
 jobs:
-  deploy:
+  pr-checks:
     runs-on: self-hosted
     strategy:
       matrix:
@@ -14,12 +14,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated version
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # Updated version
+        uses: actions/setup-node@v2
         with:
-          node-version: '20'  # Specify the desired Node.js version
+          node-version: '14'
 
       - name: Install dependencies
         run: npm install
@@ -32,8 +32,3 @@ jobs:
 
       - name: Build the project
         run: npm run build
-
-      - name: Deploy to Development Environment
-        run: |
-          echo "Deploying to development environment..."
-          # Add your deployment script here for dev
